--- a/webpack.config
+++ b/webpack.config
@@ -1,14 +1,28 @@
-// vue.config.js
+// vant
+const { VantResolver } = require('unplugin-vue-components/resolvers')
+const ComponentsPlugin = require('unplugin-vue-components/webpack')
 
-// 添加打包结果分析工具
-// configureWebpack: require('./webpack.config')
-
+// 打包结果分析工具
 const BundleAnalyzerPlugin = require('webpack-bundle-analyzer').BundleAnalyzerPlugin
 
 if (process.env.NODE_ENV === 'production') {
   module.exports = {
-    plugins: [new BundleAnalyzerPlugin()]
+    plugins: [
+      // vant
+      ComponentsPlugin({
+        resolvers: [VantResolver()],
+      }),
+      // 打包结果分析工具
+      new BundleAnalyzerPlugin()
+    ]
   }
 } else {
-  module.exports = {}
+  module.exports = {
+    plugins: [
+      // vant
+      ComponentsPlugin({
+        resolvers: [VantResolver()],
+      })
+    ]
+  }
 }
